# subdiv-kernels

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-BSD  LICENSE-MIT  LICENSE-ZLIB  README.md
.github/workflows/: ci.yml
benches/: closest_point.rs  sparse_eval.rs  wgpu_eval.rs
examples/: bevy.rs
shaders/: stencil_eval.wgsl
src/: closest_point.rs  csr.rs  error.rs  interpolate.rs  inverse.rs  lib.rs  limit.rs  limit_eval.rs  options.rs  output.rs  patch.rs  refiner.rs  sharpness.rs  stencil.rs  test_support.rs  topology.rs  wgpu.rs
src/catmull_clark/: face_varying.rs  mod.rs  sharpness.rs  tests.rs  topology.rs
src/catmull_clark/stencils/: level.rs  mod.rs  points.rs  refine.rs  sparse.rs
src/doo_sabin/: face_varying.rs  mod.rs  tests.rs  topology.rs
src/doo_sabin/stencils/: level.rs  mod.rs  points.rs  refine.rs  sparse.rs
src/face_varying/: mod.rs
src/loop_subdivision/: face_varying.rs  sharpness.rs  tests.rs  topology.rs
src/loop_subdivision/stencils/: level.rs  mod.rs  points.rs  refine.rs  sparse.rs
src/sqrt3/: face_varying.rs  tests.rs  topology.rs
src/sqrt3/stencils/: level.rs  mod.rs  points.rs  refine.rs  sparse.rs
tests/: closest_point.rs  limit_eval.rs  limit_eval_osd_oracle.rs  limit_osd_oracle.rs  limit_sectored.rs  limit_surface.rs  limit_weights.rs  patch_osd_oracle.rs  patch_table.rs  sparse_inverse_parity.rs  topology_bit_identical.rs  wgpu_parity.rs
tests/common/: mod.rs
